--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        exit_code=$?
+        if [ $exit_code -eq 5 ]; then 
+          echo "No tests found. Skipping..."
+          exit 0
+        fi
+        exit $exit_code
